base/production/instalock-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instalock-web
  namespace: production
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: instalock-web
  template:
    metadata:
      labels:
        app: instalock-web
        version: "N/A"
    spec:
      containers:
        - name: instalock-web
          image: tahminator/instalock-web
          ports:
            - containerPort: 3050
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3050
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /livez
              port: 3050
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: "84Mi"
              cpu: "30m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
