base/production/instalock-web/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: instalock-web-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`instalock.app`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: instalock-web
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: instalock-web-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`instalock.app`) && (PathPrefix(`/api/metrics`)
      kind: Rule
      middlewares:
        - name: basic-auth
      services:
        - name: instalock-web
          port: 80
    - match: Host(`instalock.app`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: instalock-web
          port: 80
  tls:
    secretName: production-instalock-web-tls
